force-app/main/default/objects/Loss_Year_Evaluation__c/Loss_Year_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Loss Year Evaluation</label>
    <nameField>
        <displayFormat>LY-{0000}</displayFormat>
        <label>Loss Year Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Year Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>