force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Aged_Months__c.field-meta.xml
<CustomField>
    <fullName>Aged_Months__c</fullName>
    <formula>MONTH(  Valued__c  ) + (( 12 * (YEAR(Valued__c)- YEAR (Policy_Start_Date__c ))) - MONTH(Policy_Start_Date__c))</formula>
    <inlineHelpText># of months from Policy Start Date to Valued Date</inlineHelpText>
    <label>Aged Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>