force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Excluded_Losses__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Losses__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount excluded from Trion Underwriting Review.</inlineHelpText>
    <label>Excluded Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>