force-app/main/default/objects/Loss_Year_Evaluation__c/fields/LDF__c.field-meta.xml
<CustomField>
    <fullName>LDF__c</fullName>
    <label>LDF</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>