force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Loss_Year__c.field-meta.xml
<CustomField>
    <fullName>Loss_Year__c</fullName>
    <label>Loss Year</label>
    <referenceTo>Loss_Year__c</referenceTo>
    <relationshipLabel>Loss Year Evaluation</relationshipLabel>
    <relationshipName>Loss_Year_Evaluation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>