force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Loss_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Loss_Year_Text__c</fullName>
    <formula>text(MONTH( Policy_Start_Date__c ))&amp;&quot;-&quot; &amp; text(day(Policy_Start_Date__c ))&amp;&quot;-&quot; &amp; text(year(Policy_Start_Date__c )) &amp; &quot; - &quot; &amp; text(MONTH( Policy_End_Date__c ))&amp;&quot;-&quot; &amp; text(day(Policy_End_Date__c ))&amp;&quot;-&quot; &amp; text(year(Policy_End_Date__c))</formula>
    <label>Loss Year Text</label>
    <type>Text</type>
</CustomField>