force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Policy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Start_Date__c</fullName>
    <label>Policy Start Date</label>
    <type>Date</type>
</CustomField>