force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Loss Year Evaluations</relationshipLabel>
    <relationshipName>Loss_Year_Evaluations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>