force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Selected_Losses__c.field-meta.xml
<CustomField>
    <fullName>Selected_Losses__c</fullName>
    <formula>Total_Losses__c - Excluded_Losses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Losses - Excluded Losses</inlineHelpText>
    <label>Selected Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>