force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Total_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserves__c</fullName>
    <label>Total Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>