force-app/main/default/objects/Loss_Year_Evaluation__c/fields/UW_Excluded_Loss_Comments__c.field-meta.xml
<CustomField>
    <fullName>UW_Excluded_Loss_Comments__c</fullName>
    <label>UW Excluded Loss Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>