force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Valued__c.field-meta.xml
<CustomField>
    <fullName>Valued__c</fullName>
    <label>Valued</label>
    <type>Date</type>
</CustomField>