force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Valued_date__c.field-meta.xml
<CustomField>
    <fullName>Valued_date__c</fullName>
    <formula>TEXT(Valued__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valued(date)</label>
    <type>Text</type>
</CustomField>