force-app/main/default/objects/Loss_Year_Evaluation__c/fields/Year_Name__c.field-meta.xml
<CustomField>
    <fullName>Year_Name__c</fullName>
    <formula>Loss_Year__r.Program_Year__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Name</label>
    <type>Text</type>
</CustomField>